--- a/package.json
+++ b/package.json
@@ -28,23 +28,25 @@
   "author": "VEO3 Automation Team",
   "license": "MIT",
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^8.2.2",
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
+    "electron-rebuild": "^3.2.9",
     "jest": "^29.7.0",
-    "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.0.8",
-    "concurrently": "^8.2.2",
     "wait-on": "^7.2.0"
   },
   "dependencies": {
-    "selenium-webdriver": "^4.15.0",
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
     "fs-extra": "^11.2.0",
-    "winston": "^3.11.0",
-    "uuid": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "selenium-webdriver": "^4.15.0",
+    "sql.js": "^1.13.0",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0",
     "zustand": "^4.4.7"
   },
   "build": {
